feat: Changed scheme of the app to match the proper naming convention,Removed package.json

--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "GraphsRN",
+    "scheme": "graphsrn",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
